# ssr-learning

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs
src/routes/: home.rs  mod.rs  my.rs
